application.properties alterado.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=projectLoginInExtensionsApi
 
 spring.datasource.url=jdbc:mariadb://localhost:3306/extensions
-spring.datasource.username=rawlinson
-spring.datasource.password=lkasdj_+__+_123lwme32k4klmds
+spring.datasource.username=SEU_USUÁRIO_AQUI
+spring.datasource.password=SUA_SENHA_AQUI
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
 spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
